--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Kelola keuangan Anda dengan mudah. Aplikasi FinanceCibination membantu Anda melacak pengeluaran, memantau anggaran, dan merencanakan masa depan finansial dengan lebih baik." />
+    <meta name="keywords" content="Finance, Budgeting, Personal Finance, Expense Tracking, Financial Planning" />
+    <meta name="author" content="Financecibination" />
     <title>Financecibination | Beta</title>
   </head>
   <body>
