Enhance SEO metadata in index.html for better visibility and social sharing

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Kelola keuangan Anda dengan mudah. Aplikasi FinanceCibination membantu Anda melacak pengeluaran, memantau anggaran, dan merencanakan masa depan finansial dengan lebih baik." />
-    <meta name="keywords" content="Finance, Budgeting, Personal Finance, Expense Tracking, Financial Planning" />
+    <meta name="title" content="Financecibination" />
+    <meta
+      name="description"
+      content="Kelola keuangan Anda dengan mudah. Aplikasi FinanceCibination membantu Anda melacak pengeluaran, memantau anggaran, dan merencanakan masa depan finansial dengan lebih baik"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:title" content="Financecibination" />
+    <meta
+      property="og:description"
+      content="Kelola keuangan Anda dengan mudah. Aplikasi FinanceCibination membantu Anda melacak pengeluaran, memantau anggaran, dan merencanakan masa depan finansial dengan lebih baik"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="" />
+    <meta property="twitter:title" content="Financecibination" />
+    <meta
+      property="twitter:description"
+      content="Kelola keuangan Anda dengan mudah. Aplikasi FinanceCibination membantu Anda melacak pengeluaran, memantau anggaran, dan merencanakan masa depan finansial dengan lebih baik"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+    <meta
+      name="keywords"
+      content="Finance, Budgeting, Personal Finance, Expense Tracking, Financial Planning"
+    />
     <meta name="author" content="Financecibination" />
     <title>Financecibination | Beta</title>
   </head>
