Add Financecibination Logo and Implement to Metadata

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/public/financecibination.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Financecibination" />
     <meta
@@ -20,7 +21,7 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="public/financecibination.png"
     />
 
     <!-- Twitter -->
@@ -29,11 +30,11 @@
     <meta property="twitter:title" content="Financecibination" />
     <meta
       property="twitter:description"
-      content="Kelola keuangan Anda dengan mudah. Aplikasi FinanceCibination membantu Anda melacak pengeluaran, memantau anggaran, dan merencanakan masa depan finansial dengan lebih baik"
+      content="Kelola keuangan Anda dengan mudah. Aplikasi Financecibination membantu Anda melacak pengeluaran, memantau anggaran, dan merencanakan masa depan finansial dengan lebih baik"
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="public/financecibination.png"
     />
     <meta
       name="keywords"
